fix data table: smooth scroll on mobile

--- a/modules/data-table/scss/_data-table.scss
+++ b/modules/data-table/scss/_data-table.scss
@@ -8,6 +8,7 @@
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 
